--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,49 @@
-# Created by https://www.toptal.com/developers/gitignore/api/rust,rust-analyzer,visualstudiocode,windows,linux
-# Edit at https://www.toptal.com/developers/gitignore?templates=rust,rust-analyzer,visualstudiocode,windows,linux
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,rust,rust-analyzer,windows,linux,homeassistant
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,rust,rust-analyzer,windows,linux,homeassistant
+
+### HomeAssistant ###
+# Files with personal details
+*.crt
+*.csr
+*.key
+.cloud
+.google.token
+.HA_VERSION
+.storage
+.uuid
+icloud/
+google_calendars.yaml
+harmony_media_room.conf
+home-assistant.db
+home-assistant_v2.db
+home-assistant_v2.db-*
+html5_push_registrations.conf
+image
+ip_bans.yaml
+known_devices.yaml
+phue.conf
+plex.conf
+pyozw.sqlite
+secrets.yaml
+tradfri.conf
+webostv.conf
+
+# Temporary files
+*.db-journal
+*.pid
+tts
+
+# automatically downloaded dependencies
+deps
+lib
+
+# Log files
+home-assistant.log
+home-assistant.log.*
+ozw_log.txt
+
+# Development files
+custom_components
 
 ### Linux ###
 *~
@@ -82,4 +126,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/rust,rust-analyzer,visualstudiocode,windows,linux
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,rust,rust-analyzer,windows,linux,homeassistant
